--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,17 @@ spring:
         url-pattern: /druid/*
         login-username: chencs
         login-password: 123456
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+    password: 123456
+    timeout: 0
+    pool:
+      max-active: 8
+      max-idle: 8
+      max-wait: -1
+      min-idle: 0
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
